app/scss/main.scss
/* ... */
@mixin basket-boxes {
    background-color: #fff;
    border: 1px solid #dce6f0;
}

@mixin opacity {
    // // @ieOpacity: @opacity * 100;
    // filter: ~"alpha(opacity=@{ieOpacity})";
    // -ms-filter: ~"progid:DXImageTransform.Microsoft.Alpha(Opacity=@{ieOpacity})";
    opacity: 0.8;
}

* {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    margin: 0;
    padding: 0;
}

address {
    font-style: normal;
}

html {
    height: 100%;
}

body {
    height: 100%;
    background: #fff;
    font-size: $mainFontSize;
    line-height: $mainLineHeight;
    font-family: $mainFont;
    color: $mainColor;
}

.wrapper {
    position: relative;
    min-height: 100%;
    height: auto !important;
}

.wrapper:after {
    content: "";
    display: block;
    height: 228px;
}

.footer {
    height: 228px;
    min-width: 1000px;
    margin-top: -228px;
}

.wrap {
    width: 1000px;
    margin: 0 auto;
    position: relative;
}

.content,
.container {
    position: relative;
}
/* header */

.phone-link {
    color: #fff
}

.header__contacts {
    background: #45626e;
    min-height: 41px;
    color: #fff;
    padding-top: 9px;
    .wrap {
        text-align: center;
    }
}

.socials-list {
    list-style: none;
    float: left;
    margin-right: 105px;
    max-width: 180px;
}

.socials-list__item {
    width: 21px;
    height: 21px;
    display: inline-block;
    text-indent: -9999px;
    margin-left: 7px;
    &:first-child {
        margin-left: 0;
    }
}

.socials-list__link {
    display: block;
    height: 100%;
    width: 100%;
    &.vk {
        background: url("../img/socials/vk_s.png") no-repeat;
        @include iconshadow;
    }
    &.fb {
        background: url("../img/socials/fb_s.png") no-repeat;
        @include iconshadow;
    }
    &.tw {
        background: url("../img/socials/tw_s.png") no-repeat;
        @include iconshadow;
    }
    &:hover {
        @include opacity;
    }
}

.address {
    background: url("../img/icons/address.png") left center no-repeat;
    padding-left: 25px;
    text-align: center;
    font-size: 13px;
    display: inline-block;
    margin: 0 auto !important;
    max-width: 530px;
}

.phone {
    font-size: 25px;
    float: right;
    margin-top: 4px;
    max-width: 190px;
    .phone__pre {
        float: left;
        margin-top: -5px;
        margin-right: 5px;
        font-family: $boldFont;
        font-size: $mainFontSize;
        color: #00b9fe;
    }
}

.header__main {
    height: 98px;
    background: #e7edf5;
    padding-top: 24px;
}

.logo {
    width: 199px;
    float: left;
    margin-right: 61px;
}

.search {
    float: left;
    margin-top: 10px;
    margin-right: 24px;
    width: 340px;
    overflow: hidden;
}

.search__input-block {
    float: left;
    height: 35px;
}

.search__input {
    width: 247px;
    height: 33px;
    border: 1px solid #dce6f0;
    padding-left: 10px;
    outline: 0;
}

::-webkit-input-placeholder {
    color: #dce6f0;
}

::-moz-placeholder {
    color: #dce6f0;
}

:-moz-placeholder {
    color: #dce6f0;
}

:-ms-input-placeholder {
    color: #dce6f0;
}

.search__submit {
    width: 80px;
    height: 35px;
    background: #00b9ff;
    border: 0;
    font-size: 17px;
    color: #fff;
    font-family: $boldFont;
}

.user-nav {
    padding-top: 2px;
    font-size: 13px;
}

.user-nav__list {
    list-style: none;
}

.user-nav__item {
    display: inline-block;
    margin-right: 16px;
    &:last-child {
        margin-right: 0;
    }
}

.user-nav__item.basket {
    position: relative;
    z-index: 999;
}

.user-nav__item.basket {
    background: url("../img/icons/basket.png") 11px center no-repeat;
    padding: 14px 18px 12px 49px;
    margin-left: 4px;
    &:hover {
        padding-left: 48px;
        margin-top: -1px;
        background-position-x: 10px;
        color: #5c7b98;
        @include basket-boxes;
        .basket__list {
            display: block;
        }
        .user-nav__link {
            color: #613993;
        }
    }
}

.user-nav__link {
    color: #00b9fe;
    &:hover {
        color: #613993;
    }
}

.basket__list {
    display: none;
    position: absolute;
    right: -1px;
    top: 45px;
    @include basket-boxes;
    list-style: none;
    .basket__item {
        width: 244px;
        height: 75px;
        border-bottom: 1px solid #f1f5f9;
        padding-top: 10px;
        display: table;
        padding-left: 15px;
        &:nth-child(2n) {
            background: #f8fafb;
        }
        &:hover {
            .basket__link {
                color: #613993
            }
        }
    }
    .basket__link {
        color: #00b9fe;
        width: 158px;
        display: table-cell;
        vertical-align: middle;
    }
    .basket__img {
        display: table-cell;
        float: left;
        vertical-align: middle;
        max-width: 186px;
    }
}

.main-nav {
    height: 40px;
    background: #f7f7f7;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
    margin-bottom: 21px;
}

.main-nav__list {
    list-style: none;
}

.main-nav__item {
    display: inline-block;
    position: relative;
    margin-right: 9px;
}
/* ... */

